[package]
name = "simulation-wasm"
version = "0.1.0"
authors = ["Darian <dariandzirko@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

simulation = { path = "../simulation" }
